--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,5 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", rev = "f28b92120920f387020f3b3e858f0e7039b9c07e", version = "0.8.0-dev", default-features = false, features = [
-    "render",
-] }
-
-[dev-dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", rev = "f28b92120920f387020f3b3e858f0e7039b9c07e" }
+# bevy = { version = "0.8.1" }
+bevy = { path = "../bevy" }
